[build-system]
requires = ["setuptools", "wheel"]

#######
# Black
#######
[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

#######
# isort
#######
[tool.isort]
profile = "black"
line_length = 88
src_paths = ["fideslib", "tests"]

########
# Pylint
########
[tool.pylint.messages_control]
disable=[
  "invalid-name",
  "line-too-long",
  "missing-class-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-instance-attributes",
  "unsubscriptable-object",
]
ignore=[
  "fideslib.egg-info",
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.reports]
reports="no"
output-format="colorized"

[tool.pylint.format]
max-line-length="88"

########
# Pytest
########
[tool.pytest.ini_options]
testpaths="tests"
log_level = "DEBUG"
addopts = [
  "--cov=fideslib",
  "--cov-report=term-missing",
  "--no-cov-on-fail",
]

#######
# MyPy
#######

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
plugins = ["sqlmypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jose.*", "setuptools.*", "sqlalchemy_utils.*"]
ignore_missing_imports = true
